# haansaan

./: LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: verify.yml
docs/: INTERNAL_PROCEDURE_AND_TRIGGERS.md  PUBLICATION_BOUNDARY.md
examples/: agent-workflow-review.request.json  logic-run.request.json  meta-check.request.json  route-decision.request.json
src/haansaan/: __init__.py  cli.py  core.py
tests/: test_core.py
