[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "haansaan"
version = "0.1.0"
description = "Purpose-driven verifier and judgment trigger router"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "coreeeeaaaa" }]

[project.scripts]
haansaan = "haansaan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "SIM", "UP"]
ignore = ["UP038"]
